updated phone number and team page

--- a/Team.html
+++ b/Team.html
@@ -61,7 +61,7 @@
         <h1 id="manage-team-title">Our Management Team</h1>
         <h3 id="center-dir-title">Beth Boedeker - Center Director</h3>
         <img src="./assets/images/beth.png" style="height: 200px; width: 200px;">
-        <p id="description-1">Beth Boedeker is the Center Director at Lullaby Inn in Saint Ann. Beth attended Ursuline Academy 
+        <p id="description-1">Beth Boedeker is the Center Director at Starlight Academy in Saint Ann. Beth attended Ursuline Academy 
         and obtained her Bachelor’s degree in psychology from the University of Missouri-Columbia. She has extensive experience 
         in management and worked as an ISL Director for Community Alternatives of Missouri. This position required her to oversee 
         supported living programs for individuals with developmental disabilities. Beth was enthusiastic about the opportunity to 
@@ -72,7 +72,7 @@
    
     <!--FOOTER-->
     <div class="footer">
-        <p id="address">10451 International Plaza Drive, St. Ann, MO 63074 &nbsp; &nbsp;(314) 309-3369</p>
+        <p id="address">10451 International Plaza Drive, St. Ann, MO 63074 &nbsp; &nbsp;(314) 942-6688</p>
     </div>
 </body>
 </html>
