added classroom page

--- a/Team.html
+++ b/Team.html
@@ -15,7 +15,6 @@
         
     <!--NAVBAR STUFF-->    
     <ul class="nav-list">
-        <!-- <a href="./index.html" id="logo">Starlight Academy</a> -->
         <img src="assets/images/image000000-3.png" style="height: 150px; width:auto; margin-top: -12px; margin-left: 40%;">
 
         
@@ -47,7 +46,7 @@
             <div class="dropdown-content">
             <a href="./Team.html">Our Team</a>
             <a href="./Curriculum.html">Curriculum</a>
-            <a href="#">Our Classroom</a>
+            <a href="./Classroom.html">Our Classroom</a>
             </div>
         </li>
         <li id="home-button">
