--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="dropdown-content">
             <a href="./Team.html">Our Team</a>
             <a href="./Curriculum.html">Curriculum</a>
-            <a href="#">Our Classroom</a>
+            <a href="./Classroom.html">Our Classroom</a>
             </div>
         </li>
         <li id="home-button">
